SQL FALTA POBLAR , EJEMPLOS JSON PARA LA PRESENTACION

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,28 @@
 server.port=8090
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=system
+spring.datasource.username=celso
 spring.datasource.password=2712
 
 #spring.datasource.driver-class-oracle.jdbc.driver.OracleDriver
 # dbcp2 settings
 # spring.datasource.dbcp2.*
 
+
+
 spring.datasource.dbcp2.initial-size=7
 spring.datasource.dbcp2.max-total=20
 spring.datasource.dbcp2.pool-prepared-statements=true
+
+
+#docker exec -ti CONTAINERNAME sqlplus / as sysdba
+#system 2712
+
+#Crear Usuario ---
+#alter session set "_ORACLE_SCRIPT"=true;  
+#CREATE USER celso IDENTIFIED BY 2712;
+#GRANT CONNECT TO celso;
+#GRANT CONNECT, RESOURCE, DBA TO celso;
+#GRANT CREATE SESSION GRANT ANY PRIVILEGE TO celso;
+
+
+
